src/Apttus Contract DocuSign Integration/objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>CheckESignatureStatus__c</fullName>
        <description>Check eSignature Status</description>
        <formula>IF(
	AND(
	   ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;),
	   ISPICKVAL(Apttus__Status__c,&quot;Other Party Signatures&quot;)
	),
HYPERLINK(&quot;/apex/Apttus_DocuApi__DocuSignEnvStatusByEnvId?envelopeparentid=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__CheckStatus&quot;,&quot;Check eSignature Status&quot;), &quot;_self&quot;),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Check eSignature Status</inlineHelpText>
        <label>Check eSignature Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSignEnvelopeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Apttus - DocuSign envelope Id to which this agreement is associated to.</description>
        <inlineHelpText>The Apttus - DocuSign envelope Id to which this agreement is associated to.</inlineHelpText>
        <label>DocuSign Envelope Id</label>
        <referenceTo>Apttus_DocuApi__DocuSignEnvelope__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecallESignatureRequest__c</fullName>
        <description>Recall E-Signature request</description>
        <formula>IF(
	AND(
           ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), 
           ISPICKVAL(Apttus__Status__c,&quot;Other Party Signatures&quot;) 
	   ),
HYPERLINK(&quot;/apex/Apttus_DocuApi__DocuSignRecallEnvByEnvId?envelopeparentid=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__RecallEnvelope&quot;,&quot;Recall E-Signature Document&quot;), &quot;_self&quot;),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Recall E-Signature request</inlineHelpText>
        <label>Recall E-Signature Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendForESignature__c</fullName>
        <formula>IF(
  OR(
    ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;), 
    (AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), 
         ISPICKVAL(Apttus__Status__c,&quot;Ready for Signatures&quot;)
        )
     ), 
     (AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), 
          ISPICKVAL(Apttus__Status__c,&quot;Signature Declined&quot;)
         )
      )
    ),
  HYPERLINK(&quot;/apex/Apttus_CMDSign__CMDocuSignCreateEnvelope?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__eSignature&quot;,&quot;Send For eSignatures&quot;), &quot;_self&quot;), 
  NULL 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send For eSignature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ViewESignatureDocument__c</fullName>
        <description>Correct E-Signature document</description>
        <formula>IF(
	AND(
           ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), 
           ISPICKVAL(Apttus__Status__c,&quot;Other Party Signatures&quot;) 
	),
HYPERLINK(&quot;/apex/Apttus_DocuApi__DocuSignViewExistingEnvelope?envelopeparentid=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__ViewEnvelope&quot;,&quot;Correct E-Signature Document&quot;), &quot;_blank&quot;),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Correct E-Signature document</inlineHelpText>
        <label>Correct E-Signature Document</label>
        <type>Text</type>
    </fields>
</CustomObject>